--- a/site/src/index.css
+++ b/site/src/index.css
@@ -93,6 +93,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
